--- a/index/exercises/exercises.css
+++ b/index/exercises/exercises.css
@@ -1,246 +1,3 @@
-.AmazonLink {
-  color: rgb(0, 113, 133);
-}
-.AmazonLink:hover {
-  color: brown;
-  cursor: pointer;
-}
-.NikeBlackLine {
-  font-size: 30px;
-  font-weight: bold;
-}
-.PriceLine {
-  color: rgb(0, 118, 0);
-  font-weight: bold;
-}
-.UberButton {
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
-  border: none;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: background-color 0.15s;
-}
-.UberButton:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-.AmazonButton {
-  background-color: rgb(255, 216, 20);
-  color: rgb(0, 0, 0);
-  border: none;
-  border-radius: 18px;
-  font-weight: bold;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: background-color 0.15s;
-}
-.AmazonButton:hover {
-  background-color: rgba(255, 200, 20);
-  cursor: pointer;
-}
-.AmazonButton:active {
-  background-color: rgba(255, 200, 20, 0.6);
-}
-.BuyNow {
-  background-color: rgb(255, 164, 28);
-  border: none;
-  border-radius: 15px;
-  font-weight: bold;
-  font-size: solid;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: background-color 0.15s;
-}
-.BuyNow:hover {
-  background-color: rgb(255, 135, 28);
-  cursor: pointer;
-}
-.BuyNow:active {
-  background-color: rgb(255, 135, 28, 0.6);
-}
-.GitHubButton {
-  background-color: rgb(46, 164, 79);
-  color: rgb(255, 255, 255);
-  border: none;
-  border-radius: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: background-color 0.15s;
-}
-.GitHubButton:hover {
-  cursor: pointer;
-  box-shadow: 0px 5px 8px rgb(0, 0, 0, 0.15);
-}
-.BootstrapButton1 {
-  background-color: rgb(121, 82, 179);
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  border: none;
-  border-radius: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: background-color 0.15s;
-}
-.BootstrapButton1:hover {
-  background-color: rgb(121, 59, 179);
-  cursor: pointer;
-}
-.BootstrapButtonDownload2 {
-  font-weight: bold;
-  background-color: rgb(255, 255, 255);
-  color: rgb(108, 117, 125);
-  border-color: rgb(108, 117, 125);
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: background-color 0.15s;
-}
-.BootstrapButtonDownload2:hover {
-  background-color: rgb(108, 117, 125);
-  color: rgb(255, 255, 255);
-  cursor: pointer;
-}
-.LinkedinButton1 {
-  background-color: rgb(10, 102, 194);
-  color: rgb(255, 255, 255);
-  border-color: rgb(108, 117, 125);
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: background-color 0.15s;
-}
-.LinkedinButton1:hover {
-  background-color: rgb(2, 70, 138);
-  transition: background-color 0.15s, border-width 0.15;
-  cursor: pointer;
-}
-.LinkedinButton2 {
-  font-size: bold;
-  background-color: rgb(255, 255, 255);
-  color: rgb(10, 102, 194);
-  border-color: rgb(10, 102, 194);
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-}
-.LinkedinButton2:hover {
-  cursor: pointer;
-  background-color: rgb(226, 240, 254);
-  transition: background-color 0.15s border-width 0.15;
-}
-.BackAndNextButton {
-  margin-left: 5px;
-  margin-right: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-}
-.NumberLinks {
-  margin-left: 5px;
-}
-.StretchButton {
-  background-color: rgb(44, 141, 44);
-  color: rgb(255, 255, 255);
-  border: none;
-  font-size: 18px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  transition: padding-top 1s, padding-bottom 1s, padding-left 1s,
-    padding-right 1s;
-}
-.StretchButton:hover {
-  cursor: pointer;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  padding-left: 36px;
-  padding-right: 36px;
-  transition: padding-top 0.1s, padding-bottom 1s padding-left 1s,
-    padding-right 1s;
-}
-
-.ShadowButton {
-  background-color: rgb(44, 141, 44);
-  color: rgb(255, 255, 255);
-  border: none;
-  font-size: 18px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-}
-.ShadowButton:hover {
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-}
-.ShadowButton:active {
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 0, 0);
-  margin-top: 3px;
-  margin-left: 3px;
-  box-shadow: none;
-}
-.OneTwoThreeButton {
-  background-color: rgb(44, 141, 44);
-  border: none;
-  color: rgb(255, 255, 255);
-  font-size: 18px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.OneTwoThreeButton:hover {
-  transition: padding 0.15s, margin 0.15s;
-  cursor: pointer;
-  padding-left: 35px;
-  padding-right: 35px;
-  margin-left: 0px;
-  margin-right: 0px;
-}
-.Tahoma {
-  font-family: Tahoma;
-  font-size: 30px;
-  font-weight: bold;
-}
-.title {
-  font-family: Arial;
-  font-size: 26px;
-  font-weight: bold;
-  margin-bottom: 8px;
-}
-
-.sale {
-  font-family: Arial;
-  color: rgb(255, 0, 0);
-  font-style: italic;
-  font-size: 18px;
-  margin-top: 0;
+body {
+  background-color: grey;
 }
